--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Programação</title>
 </head>
 <body>
-    <h1> vai ser uma imagem aqui</h1>
+    <h1> vai ser uma Imagem aqui</h1>
     
 </body>
 </html>
