--- a/index.html
+++ b/index.html
@@ -34,3 +34,5 @@ DOCTYPE html>
 </body>
 
 </html>
+<img src=”img/Combo.png” alt=”O combo+ é a junção do alura+ e o alura língua”>
+<a href=”www.alura.com.br”></a>
