--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@ DOCTYPE html>
 </body>
 
 </html>
+<section>a</section>
 <img src=”img/Combo.png” alt=”O combo+ é a junção do alura+ e o alura língua”>
 <a href=”www.alura.com.br”></a>
