--- a/index.html
+++ b/index.html
@@ -37,3 +37,4 @@ DOCTYPE html>
 <section>a</section>
 <img src=”img/Combo.png” alt=”O combo+ é a junção do alura+ e o alura língua”>
 <a href=”www.alura.com.br”></a>
+<a href=”www.alura.com.br”>Assine por 12x de R$120,00*</a>
