--- a/index.html
+++ b/index.html
@@ -38,3 +38,4 @@ DOCTYPE html>
 <img src=”img/Combo.png” alt=”O combo+ é a junção do alura+ e o alura língua”>
 <a href=”www.alura.com.br”></a>
 <a href=”www.alura.com.br”>Assine por 12x de R$120,00*</a>
+<a><a href=”www.alura.com.br” class=”container__botao”>Assine por 12x de R$120,00*</a></a>
